# FreeCROS

./: .CMakeLists.txt.kate-swp  .gitignore  CMakeLists.txt  FreeCROS.kdev4
config/x86/: bochs.bxrc  gdbcommand  gdbcommand-server  grub.cfg  grub.cfg.config  kernel.ld  user.ld
kernel/: CMakeLists.txt  Global.h  Log.h  Main.cpp  Multiboot.cpp  Multiboot.h
kernel/cpu/: CMakeLists.txt  CPU.cpp  CPU.h  CPUManager.h  SpinLock.h
kernel/drivers/: CMakeLists.txt  Drivers.cpp  Drivers.h
kernel/drivers/buffer/: Buffer.cpp  BufferManager.cpp  BufferManager.h  CMakeLists.txt
kernel/drivers/hd/: BlockDev.h  CMakeLists.txt  HardDrive.cpp  HardDrive.h  HdOperation.cpp  blk.h  hd.c  hdreg.h
kernel/drivers/tty/: CMakeLists.txt  Console.cpp  Keyboard.S  Keyboard.cpp  Keyboard.h  Pty.cpp  Serial.cpp  Tty.cpp  TtyIo.cpp
kernel/memory/: .MemoryManager.cpp.kate-swp  AddressSpace.h  AddressSpaceManager.cpp  AddressSpaceManager.h  CMakeLists.txt  HeapManager.cpp  HeapManager.h  MamoryManager.cpp  MamoryManager.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryBuddyAllocator.cpp  MemoryBuddyAllocator.h  MemoryListAllocator.cpp  MemoryListAllocator.h  MemoryManager.cpp  MemoryManager.h  New.cpp  New.h
kernel/memory/heap/: CMakeLists.txt  Heap.cpp  Heap.h  PageFrameManager.cpp  PageFrameManager.h
kernel/misc/: CMakeLists.txt  ServerLoader.cpp  ServerLoader.h
kernel/ramdisk/: CMakeLists.txt  RamDisk.cpp  RamDisk.h  RamDiskItem.cpp  RamDiskItem.h  RamDiskItemChrDev.cpp  RamDiskItemChrDev.h  RamDiskItemDir.cpp  RamDiskItemDir.h  RamDiskItemFIle.h  RamDiskItemFile.cpp  RamDiskItemFile.h  RamDiskItemKernel.cpp  RamDiskItemKernel.h  RamDiskItemMounted.cpp  RamDiskItemMounted.h
kernel/syscall/: CMakeLists.txt  SystemCallEntry.cpp  SystemCallEntry.h  SystemCalls.cpp  SystemCalls.h
kernel/thread/: CMakeLists.txt  IPCMessage.cpp  IPCMessage.h  Scheduler.h  SchedulerDefault.cpp  SchedulerDefault.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h  ThreadState.cpp  ThreadState.h  WaitableObj.cpp  WaitableObj.h
kernel/tty/: .Keyboard.S.swp  CMakeLists.txt  Keyboard.S  Pty.cpp  Tty.cpp  Tty.h  TtyIo.cpp
kernel/x86/: AddressSpaceX86.cpp  AddressSpaceX86.h  Boot.S  CMakeLists.txt  CPUManager.cpp  CPUState.cpp  CPUState.h  CPUx86.cpp  CPUx86.h  Clock.cpp  Clock.h  HAL.cpp  HAL.h  Interrupt.S  Interrupt.cpp  Interrupt.h  Log.cpp  Log.h  Segment.h  SpinLock.cpp  Thread.cpp  boot.S
kernel/x86/apci/: .APCI.h.kate-swp  APCI.cpp  APCI.h  IOAPIC.cpp  IOAPIC.h  LocalAPCI.cpp  LocalAPCI.h
lib/: CMakeLists.txt
lib/libc/: CMakeLists.txt  crt0.cpp  crt0.h  crtend.cpp  ctype.cpp  ctype.h  dirent.h  errno.cpp  errno.h  stddef.h  stdio.h  stdlib.h  string.cpp  string.h  time.h
lib/libc++/: CMakeLists.txt  Support.cpp
lib/libc/file/: dir.cpp
lib/libc/stdio/: fileops.cpp  fileops.h  fprintf.cpp  printf.cpp  scanf.cpp  snprintf.cpp  vsnprintf.cpp  vsprintf.cpp
lib/libc/stdlib/: atoi.cpp  itoa.cpp  new.cpp  strtol.cpp
lib/libc/time/: time.cpp
lib/libexec/: CMakeLists.txt  ELF.cpp  ELF.h  ELFHeader.h  ExecutableFormat.cpp  ExecutableFormat.h
lib/libkernel/: CMakeLists.txt  Device.h  Interrupts.h  Macros.h  SpinLock.cpp  SpinLock.h  SystemCalls.h  Threads.h  Tools.h  Type.h  UserLog.h
lib/libkernel/driver/buffer/: Buffer.h  Request.cpp  Request.h
lib/libkernel/driver/tty/: termios.h  tty.h
lib/libkernel/memory/: MemoryAllocator.cpp  MemoryAllocator.h  MemoryBuddyAllocator.h  MemoryListAllocator.cpp  MemoryListAllocator.h
lib/libkernel/thread/: Message.h  Signal.cpp  Signal.h
lib/libkernel/tty/: tty.h  ttymacro.h
lib/liblalr/: CMakeLists.txt
lib/libserver/: CMakeLists.txt  New.cpp  New.h  Server.h  tty.h  ttymacro.h
lib/libserver/fsserver/: format.cpp  format.h
server/: CMakeLists.txt
server/device/: CMakeLists.txt  Keyboard.cpp  main.cpp
server/device/fat32/: CMakeLists.txt  fat32.cpp  fat32.h  fat32lib.cpp  fat32lib.h
server/device/keyboard/: CMakeLists.txt  KeyHandler.cpp  KeyHandler.h  Keyboard.cpp
server/device/tty/: CMakeLists.txt  console.cpp  keyboard.S  tty_io.cpp  tty_ioctl.cpp
server/process/: CMakeLists.txt  main.cpp
