AUX_SOURCE_DIRECTORY(./apci APCI_SRC)
#AUX_SOURCE_DIRECTORY(./mps MPS_SRC)
AUX_SOURCE_DIRECTORY(. SRCS)

SET(ASM_SRC Boot.S Interrupt.S)
SET(SRCS ${SRCS} ${ASM_SRC})

SET_SOURCE_FILES_PROPERTIES(${ASM_SRC} PROPERTIES LANGUAGE C)

ADD_LIBRARY(arch ${SRCS} ${APCI_SRC} ${MPS_SRC})
target_link_libraries(arch cpu memory thread c syscall)