AUX_SOURCE_DIRECTORY(./apci APCI_SRC)
#AUX_SOURCE_DIRECTORY(./mps MPS_SRC)
AUX_SOURCE_DIRECTORY(. SRCS)

SET(ASM_SRC Boot.S Interrupt.S)
SET(SRCS ${SRCS} ${ASM_SRC})

SET_SOURCE_FILES_PROPERTIES(${ASM_SRC} PROPERTIES LANGUAGE CXX)

SET(NO_OPTIMIZE ${SRCS})
set_source_files_properties(${NO_OPTIMIZE} PROPERTIES COMPILE_FLAGS "${N_FLAG} -O0")

ADD_LIBRARY(arch ${SRCS} ${APCI_SRC} ${MPS_SRC})
target_link_libraries(arch cpu memory thread c syscall)